# MS-Dubstudio

./: .gitignore  README.md  pyproject.toml
docs/: implementation_plan.md  ms-dubstudio-design-doc.md  ms-dubstudio-ui-design-doc.md  task.md
msdubstudio/: __init__.py  config.py  main.py
msdubstudio/core/: __init__.py  media_io.py  models.py  project.py  render.py  scene.py  stt.py  sync.py  translator.py  tts.py
msdubstudio/resources/: styles.qss
msdubstudio/ui/: __init__.py  main_window.py  overlay.py
msdubstudio/ui/views/: __init__.py  export_view.py  home_view.py  import_view.py  review_view.py  settings_view.py  stt_view.py  translate_view.py  voice_view.py
msdubstudio/ui/widgets/: __init__.py  ai_console.py  confidence_badge.py  segment_table.py  speaker_avatar.py  video_player.py  waveform_widget.py
msdubstudio/workers/: __init__.py  base_worker.py  import_worker.py  render_worker.py  stt_worker.py  translate_worker.py  tts_worker.py
tests/: __init__.py  conftest.py
tests/core/: __init__.py  test_media_io.py  test_models.py  test_project.py  test_scene.py  test_stt.py  test_sync.py  test_translator.py  test_tts.py
tests/fixtures/: mock_gemini_responses.json
tests/workers/: __init__.py  test_workers.py
